Refactor: move Arrow bulk out of the server module. This causes too many version conflicts.