@@ -7,18 +7,8 @@ dependencies {
   javaRestTestImplementation project(xpackModule('esql:qa:testFixtures'))
   javaRestTestImplementation project(xpackModule('esql:qa:server'))
   javaRestTestImplementation project(xpackModule('esql:tools'))
+  javaRestTestImplementation project(":libs:arrow")
   yamlRestTestImplementation project(xpackModule('esql:qa:server'))
-
-  javaRestTestImplementation(project(":libs:arrow"))
-  javaRestTestImplementation("org.checkerframework:checker-qual:3.48.1")
-  javaRestTestImplementation("com.google.flatbuffers:flatbuffers-java:24.3.25")
-  javaRestTestImplementation("com.fasterxml.jackson.core:jackson-core:${versions.jackson}")
-  javaRestTestImplementation("com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}")
-  javaRestTestImplementation("com.fasterxml.jackson.core:jackson-databind:${versions.jackson}")
-  javaRestTestImplementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versions.jackson}")
-  javaRestTestImplementation("commons-codec:commons-codec:${versions.commonscodec}")
-  javaRestTestImplementation("org.slf4j:slf4j-api:${versions.slf4j}")
-  javaRestTestImplementation("org.slf4j:slf4j-nop:${versions.slf4j}")
 
   clusterPlugins project(':plugins:mapper-size')
   clusterPlugins project(':plugins:mapper-murmur3')
@@ -37,7 +27,6 @@ restResources {
 tasks.named('javaRestTest') {
   usesDefaultDistribution("to be triaged")
   maxParallelForks = 1
-  jvmArgs('--add-opens=java.base/java.nio=ALL-UNNAMED')
 }
 
 tasks.named('yamlRestTest') {
